objects/pse__Create_Project_Global__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for Creating a project</description>
    <fields>
        <fullName>pse__Always_Copy_Resource_Requests_From_Opp__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, resource requests are copied from opportunity</description>
        <inlineHelpText>If true, resource requests are copied from opportunity</inlineHelpText>
        <label>Always Copy Resource Requests From Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Amount_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Budget Amount is required, if this is set to true</description>
        <inlineHelpText>Budget Amount is required, if this is set to true</inlineHelpText>
        <label>Budget Amount Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Def_Use_Services_Attach_from_Prod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked,  budget default uses services attached from products</description>
        <inlineHelpText>If checked,  budget default uses services attached from products</inlineHelpText>
        <label>Budget Def Use Services Attach from Prod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Def_using_Existing_Expense_Amount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if checked, budget default using existing expense amounts is true</description>
        <inlineHelpText>if checked, budget default using existing expense amounts is true</inlineHelpText>
        <label>Budget Def using Existing Expense Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Effective_Date_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Budget effective date is required, if set to true</description>
        <inlineHelpText>Budget effective date is required, if set to true</inlineHelpText>
        <label>Budget Effective Date Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Name_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Budget Name is required if set to true</description>
        <inlineHelpText>Budget Name is required if set to true</inlineHelpText>
        <label>Budget Name Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Name_Suffix__c</fullName>
        <defaultValue>&quot;-Budget&quot;</defaultValue>
        <description>Suffix for Budget Name</description>
        <inlineHelpText>Suffix for Budget Name</inlineHelpText>
        <label>Budget_Name_Suffix</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Prebilled_Amount_Required__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <description>Budget Prebilled Amount is required, if set to true</description>
        <inlineHelpText>Budget Prebilled Amount is required, if set to true</inlineHelpText>
        <label>Budget Prebilled Amount Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Status_Required__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <description>Budget Status is required, if set to true</description>
        <inlineHelpText>Budget Status is required, if set to true</inlineHelpText>
        <label>Budget Status Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Type_Picklist_Values__c</fullName>
        <defaultValue>&quot;Vendor Purchase Order Change Request, Customer Purchase Order, Customer Purchase Order Change Request, Work Order, Internal Budget, Internal Budget Change Request&quot;</defaultValue>
        <description>Picklist Values for type of Budget</description>
        <inlineHelpText>Picklist Values for type of Budget</inlineHelpText>
        <label>Budget Type Picklist Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Create_Budget_Frm_Selected_SPLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, Budget is created from selected service product line items</description>
        <inlineHelpText>if checked, Budget is created from selected service product line items</inlineHelpText>
        <label>Create Budget Frm Selected SPLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Budget_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, Default Budget Name is true</description>
        <inlineHelpText>If checked, Default Budget Name is true</inlineHelpText>
        <label>Default Budget Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Budget_Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <description>Default Status for Budget</description>
        <inlineHelpText>Default Status for Budget</inlineHelpText>
        <label>Default Budget Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Budget_Type__c</fullName>
        <defaultValue>&quot;Customer Purchase Order&quot;</defaultValue>
        <description>Default type of Budget</description>
        <inlineHelpText>Default type of Budget</inlineHelpText>
        <label>Default Budget Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, default value for is active is true</description>
        <inlineHelpText>If checked, default value for is active is true</inlineHelpText>
        <label>Default Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Is_Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, default value for is billable is true</description>
        <inlineHelpText>If checked, default value for is billable is true</inlineHelpText>
        <label>Default Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Project_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, default project name is true</description>
        <inlineHelpText>If checked, default project name is true</inlineHelpText>
        <label>Default Project Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Project_Owner__c</fullName>
        <defaultValue>&quot;Opportunity Owner&quot;</defaultValue>
        <description>Default value for Project Owner</description>
        <inlineHelpText>Default value for Project Owner</inlineHelpText>
        <label>Default Project Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, default time is credited</description>
        <inlineHelpText>If checked, default time is credited</inlineHelpText>
        <label>Default Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, default time is excluded</description>
        <inlineHelpText>If checked, default time is excluded</inlineHelpText>
        <label>Default Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date_Required__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <description>End Date is required, if set to true</description>
        <inlineHelpText>End Date is required, if set to true</inlineHelpText>
        <label>End Date Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Group_Required__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <description>Decides if Group is required to create a Project</description>
        <inlineHelpText>Decides if Group is required to create a Project</inlineHelpText>
        <label>Group Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Fields_To_Display__c</fullName>
        <defaultValue>&quot;Name, Milestone_Amount__c, Target_Date__c, Requires_Customer_Sign_off__c, Description__c, Planned_Hours__c&quot;</defaultValue>
        <description>Milestone Fields to be displayed</description>
        <inlineHelpText>Milestone Fields to be displayed</inlineHelpText>
        <label>Milestone Fields To Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Owner_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Opportunity Owner required, if set to true</description>
        <inlineHelpText>Opportunity Owner required, if set to true</inlineHelpText>
        <label>Opportunity Owner Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Owner_Id_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Owner Id is required, if set to true</description>
        <inlineHelpText>Owner Id is required, if set to true</inlineHelpText>
        <label>Owner Id Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Decides if practice is required to craete a project</description>
        <inlineHelpText>Decides if practice is required to craete a project</inlineHelpText>
        <label>Practice Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Manager_Required__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <description>Project Manager is required, if set to true</description>
        <inlineHelpText>Project Manager is required, if set to true</inlineHelpText>
        <label>Project Manager Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Name_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Project Name is required, if set to true</description>
        <inlineHelpText>Project Name is required, if set to true</inlineHelpText>
        <label>Project Name Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Name_Suffix__c</fullName>
        <defaultValue>&quot;-Project&quot;</defaultValue>
        <description>Suffix for Project Name</description>
        <inlineHelpText>Suffix for Project Name</inlineHelpText>
        <label>Project Name Suffix</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Region_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Decides if region is required for creating project</description>
        <inlineHelpText>Decides if region is required for creating project</inlineHelpText>
        <label>Region Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Account_Name__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Account Name, if true</description>
        <inlineHelpText>Displays Account Name, if true</inlineHelpText>
        <label>Show Account Name</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Budget_Amount__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Budget Amount, if set true</description>
        <inlineHelpText>Displays Budget Amount, if set true</inlineHelpText>
        <label>Show Budget Amount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Budget_Effective_Date__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays budget effective date, if set to true</description>
        <inlineHelpText>Displays budget effective date, if set to true</inlineHelpText>
        <label>Show Budget Effective Date</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Budget_Name__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Budget name, if set to true</description>
        <inlineHelpText>Displays Budget name, if set to true</inlineHelpText>
        <label>Show Budget Name</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Budget_Prebilled_Amount__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Budget Prebilled Amount, if set to true</description>
        <inlineHelpText>Displays Budget Prebilled Amount, if set to true</inlineHelpText>
        <label>Show Budget Prebilled Amount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Budget_Status__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays budget status, if set to true</description>
        <inlineHelpText>Displays budget status, if set to true</inlineHelpText>
        <label>Show Budget Status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Budget_Type__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Budget Type, if set to true</description>
        <inlineHelpText>Displays Budget Type, if set to true</inlineHelpText>
        <label>Show Budget Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_End_Date__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays End Date, if set to true</description>
        <inlineHelpText>Displays End Date, if set to true</inlineHelpText>
        <label>Show End Date</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Group__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays group, if true</description>
        <inlineHelpText>Displays group, if true</inlineHelpText>
        <label>Show Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Is_Active__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays is active, if set to true</description>
        <inlineHelpText>Displays is active, if set to true</inlineHelpText>
        <label>Show Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Is_Billable__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Is billable, if set to true</description>
        <inlineHelpText>Displays Is billable, if set to true</inlineHelpText>
        <label>Show Is Billable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Opportunity_Owner__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Opportunity owner, if set to true</description>
        <inlineHelpText>Displays Opportunity owner, if set to true</inlineHelpText>
        <label>Show Opportunity Owner</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Opportunity__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Opportunity, if true</description>
        <inlineHelpText>Displays Opportunity, if true</inlineHelpText>
        <label>Show Opportunity</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Owner_Id__c</fullName>
        <defaultValue>&quot;false&quot;</defaultValue>
        <description>Displays owner id, if true</description>
        <inlineHelpText>Displays owner id, if true</inlineHelpText>
        <label>Show Owner Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Practice__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Practice, if true</description>
        <inlineHelpText>Displays Practice, if true</inlineHelpText>
        <label>Show Practice</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Project_Manager__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Project Manager, if set to true</description>
        <inlineHelpText>Displays Project Manager, if set to true</inlineHelpText>
        <label>Show Project Manager</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Project_Name__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays project name, if true</description>
        <inlineHelpText>Displays project name, if true</inlineHelpText>
        <label>Show Project Name</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Region__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays region, if true</description>
        <inlineHelpText>Displays region, if true</inlineHelpText>
        <label>Show Region</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Resource_Requests__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays resource requests, if set to true</description>
        <inlineHelpText>Displays resource requests, if set to true</inlineHelpText>
        <label>Show Resource Requests</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Start_Date__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Start date, if true</description>
        <inlineHelpText>Displays Start date, if true</inlineHelpText>
        <label>Show Start Date</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Time_Credited__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Time Credited, if set to true</description>
        <inlineHelpText>Displays Time Credited, if set to true</inlineHelpText>
        <label>Show Time Credited</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Time_Excluded__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Displays Time Excluded, if set to true</description>
        <inlineHelpText>Displays Time Excluded, if set to true</inlineHelpText>
        <label>Show Time Excluded</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date_Required__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>Start date is required if set to true</description>
        <inlineHelpText>Start date is required if set to true</inlineHelpText>
        <label>Start Date Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Deprecated:Create_Project_Global</label>
</CustomObject>